--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://api.imgur.com/3/gallery",
   "eslintConfig": {
     "extends": "react-app"
   },
